--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=client-api
+
+#H2Database config
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2_console
+
+#Datasource config
+spring.datasource.url=jdbc:h2:mem:clientdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+#JPA config
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
