API com conexão estável, preparando para efetuar testes CRUD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=client-api
 
+api.security.token.secret=minha-chave-secreta-muito-longa-e-segura-para-o-desafio-neoapp
+spring.jpa.open-in-view=false
+
 #H2Database config
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2_console
