API pronta, falta testar

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.application.name=client-api
 
-api.security.token.secret=minha-chave-secreta-muito-longa-e-segura-para-o-desafio-neoapp
+#logging.level.org.springframework.security=DEBUG
+api.security.token.secret=123456
 spring.jpa.open-in-view=false
 
 #H2Database config
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2_console
+server.port=8081
 
 #Datasource config
 spring.datasource.url=jdbc:h2:mem:clientdb
@@ -16,3 +18,5 @@ spring.datasource.password=password
 #JPA config
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.defer-datasource-initialization=true
